# ingestion_upbank

./: .gitignore  LICENSE  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml
app/lambda/fastapi/: index.py
app/lambda/layer/python/: pyvenv.cfg  requirements.txt
app/lambda/webhook/: config.yaml  helpers.py  index.py  utils.py
app/layer/python/: requirements.txt
app/tests/lambda/webhook/: test_handler.py
app/webhook/: config.yaml  helpers.py  index.py  utils.py
cdk/: .gitignore  package-lock.json
cdk/lib/api/: webhook-construct.ts
cdk/lib/iam/: lambda-role-construct.ts
cdk/lib/lambda/: python-construct.ts  python-layer.ts
cdk/lib/stacks/: api-stack.ts
