[tool.poetry]
name = "ingestion-upbank"
version = "0.1.0"
description = ""
authors = ["Noel Borneo <born.angelonoel@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app/lambda" }
]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
tox = "^4.23.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
