[tool.poetry]
name = "ingestion-upbank"
version = "0.1.0"
description = ""
authors = ["Noel Borneo <born.angelonoel@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app/webhook" }
]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
boto3 = "^1.35.44"
aws-lambda-powertools = "^3.1.0"
requests = "^2.32.3"
aws-xray-sdk = "^2.14.0"
httpx = "^0.27.2"
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
tox = "^4.23.0"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"
ruff = "^0.7.1"
mypy = "^1.13.0"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
